app/assets/stylesheets/about.css.scss
.a-about {
  h3 {
    // margin: 0;
    color: #000;
    margin-bottom: 2em;
    margin-top: 2.2em;
    font-weight: normal;
    padding-left: 8px;
  }
  p {
    padding-left: 8px;
  }
}
.about-column {

  // .img {
  //   background: #F8F8F8 image-url("newslides/bike.jpg");

  //   &.window {
  //     background-image: image-url("newslides/window.jpg");
  //   }
  // }
  @include span-columns(2);
  @include media($mobile) {
    @include fill-parent;
    .scrubsprite {
      height: 250px;
      // -webkit-background-size: 2000px;
      // background-position: 0 0 !important;
    }
    p {
      padding-right: 0;
    }
  }

  p {
    padding-right: 2em;
  }
}

.row {
  @include row();
}

img {
  max-width: 100%;
  vertical-align: bottom;
}

.tile {
  overflow: hidden;
}

.scrubsprite {
  background: #F8F8F8;
  background-position: -2310px -0px;
  display:block;
  overflow:hidden;
  background-repeat: no-repeat;
  width: 100%;
  height: 445px;

  .sunflare & { background-image: image-url("newslides/sunflare.jpg"); }
  .window & { background-image: image-url("newslides/window.jpg"); }
  .bike & { background-image: image-url("newslides/bike.jpg"); }

  &.s-01 {background-position: -2310px -550px}
  &.s-02 {background-position: -2310px -0px}
  &.s-03 {background-position: -1980px -1100px}
  &.s-04 {background-position: -1980px -550px}
  &.s-05 {background-position: -1980px -0px}
  &.s-06 {background-position: -1650px -1100px}
  &.s-07 {background-position: -1650px -550px}
  &.s-08 {background-position: -1650px -0px}
  &.s-09 {background-position: -1320px -1100px}
  &.s-10 {background-position: -1320px -550px}
  &.s-11 {background-position: -1320px -0px}
  &.s-12 {background-position: -990px -1100px}
  &.s-13 {background-position: -990px -550px}
  &.s-14 {background-position: -990px -0px}
  &.s-15 {background-position: -660px -1100px}
  &.s-16 {background-position: -660px -550px}
  &.s-17 {background-position: -660px -0px}
  &.s-18 {background-position: -330px -1100px}
  &.s-19 {background-position: -330px -550px}
  &.s-20 {background-position: -330px -0px}
  &.s-21 {background-position: -0px -1100px}
  &.s-22 {background-position: -0px -550px}
  &.s-23 {background-position: -0px -0px}
}

